adjusted naming of files to be more consistent
